5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1644_2711.log
== TEST (2019-04-16 14:53:04) 
-- CODE:
valor = float(input())
qtd= int(input())
vtk= float(input())
qtdpasse= int(input())
vpasse= float(input())

precopasse=qtpasse*vpasse
precoo
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    precopasse=qtpasse*vpasse
NameError: name 'qtpasse' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:54:47) 
-- CODE:
valor = float(input())
qtd= int(input())
vtk= float(input())
qtdpasse= int(input())
vpasse= float(input())

precopasse=qtpasse*vpasse
precotk= qtd*vtk
total=precopasse+precotk
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    precopasse=qtpasse*vpasse
NameError: name 'qtpasse' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:08:59) 
-- CODE:
valor = float(input())
qtd= int(input())
vtk= float(input())
qtdpasse= int(input())
vpasse= float(input())

precopasse=qtpasse*vpasse
precotk= qtd*vtk
total=precopasse+precotk
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    precopasse=qtpasse*vpasse
NameError: name 'qtpasse' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:22:38) 
-- CODE:
valor = float(input())
qtd= int(input())
vtk= float(input())
qtdpasse= int(input())
vpasse= float(input())

precopasse=qtpasse*vpasse
precotk= qtd*vtk
total=precopasse+precotk
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    precopasse=qtpasse*vpasse
NameError: name 'qtpasse' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:31:16) 
-- CODE:
valor = float(input(""))
qtd = int(input(""))
vtk = float(input(""))
qtdpasse = int(input(""))
vpasse= float(input(""))
if (vpasse = qtpasse*vpasse):
	vtk = qtd*vtk
	print(suficiente)
if (valor = vpasse +vtk):
	print(insuficiente)
-- ERROR:
File "XXXX", line 6
    if (vpasse = qtpasse*vpasse):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:47:38) 
-- CODE:
total = float(input(""))
qtdru = int(input(""))
vru = float(input(""))
qtdonibus = int(input(""))
vonibus = float(input(""))

if ( (qtdru* vru) + (qtdonibus * vonibus) >== total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- ERROR:
File "XXXX", line 7
    if ( (qtdru* vru) + (qtdonibus * vonibus) >== total):
                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:47:51) 
-- CODE:
total = float(input(""))
qtdru = int(input(""))
vru = float(input(""))
qtdonibus = int(input(""))
vonibus = float(input(""))

if ( (qtdru* vru) + (qtdonibus * vonibus) >= total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:48:28) 
-- CODE:
total = float(input(""))
qtdru = int(input(""))
vru = float(input(""))
qtdonibus = int(input(""))
vonibus = float(input(""))

if ( (qtdru* vru) + (qtdonibus * vonibus) >= total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.532275
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:48:42) 
-- CODE:
total = float(input(""))
qtdru = int(input(""))
vru = float(input(""))
qtdonibus = int(input(""))
vonibus = float(input(""))

if ( (qtdru* vru) + (qtdonibus * vonibus) == total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:50:25) 
-- CODE:
total = float(input(""))
qtdru = int(input(""))
vru = float(input(""))
qtdonibus = int(input(""))
vonibus = float(input(""))

if ( (qtdru* vru) + (qtdonibus * vonibus) <= total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:50:43) 
-- CODE:
total = float(input(""))
qtdru = int(input(""))
vru = float(input(""))
qtdonibus = int(input(""))
vonibus = float(input(""))

if ( (qtdru* vru) + (qtdonibus * vonibus) <= total):
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.734058
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
